--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "laravel-goto-env",
     "displayName": "Laravel goto env",
     "description": "Quick jump to env",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "publisher": "ctf0",
     "engines": {
         "vscode": "^1.41.0"
@@ -20,7 +20,8 @@
     ],
     "activationEvents": [
         "onLanguage:php",
-        "onLanguage:blade"
+        "onLanguage:blade",
+        "onUri"
     ],
     "main": "./out/src/extension",
     "contributes": {},
