--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "laravel-goto-env",
-    "displayName": "Laravel goto env",
+    "displayName": "Laravel Goto Env",
     "description": "Quick jump to env",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "publisher": "ctf0",
     "engines": {
         "vscode": "^1.41.0"
