--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "laravel-goto-env",
     "displayName": "Laravel Goto Env",
     "description": "Quick jump to env",
-    "version": "0.0.9",
+    "version": "0.1.0",
     "publisher": "ctf0",
     "engines": {
-        "vscode": "^1.48.0"
+        "vscode": "^1.51.0"
     },
     "repository": "https://github.com/ctf0/laravel-goto-env",
     "icon": "images/logo.png",
@@ -28,7 +28,7 @@
             "type": "object",
             "title": "Laravel Goto Env",
             "properties": {
-                "laravel_goto_env.methods": {
+                "laravelGotoEnv.methods": {
                     "type": "array",
                     "default": [
                         "env",
@@ -54,14 +54,14 @@
     },
     "devDependencies": {
         "@types/glob": "^7.1.3",
-        "@types/mocha": "^8.0.3",
-        "@types/node": "^14.6.0",
-        "@types/vscode": "^1.48.0",
+        "@types/mocha": "^8.2.0",
+        "@types/node": "^14.14.10",
+        "@types/vscode": "^1.51.0",
         "glob": "^7.1.6",
-        "mocha": "^8.1.2",
+        "mocha": "^8.2.1",
         "tslint": "^6.1.3",
-        "typescript": "^4.0.2",
-        "vscode-test": "^1.4.0"
+        "typescript": "^4.1.2",
+        "vscode-test": "^1.4.1"
     },
     "dependencies": {
         "escape-string-regexp": "^4.0.0",
