--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "laravel-goto-env",
     "displayName": "Laravel Goto Env",
     "description": "Quick jump to env",
-    "version": "0.2.2",
+    "version": "0.2.3",
     "publisher": "ctf0",
     "engines": {
         "vscode": "^1.51.0"
@@ -44,6 +44,18 @@
                     "minItems": 1,
                     "uniqueItems": true,
                     "description": "methods to search for"
+                },
+                "laravelGotoEnv.envFiles": {
+                    "type": "array",
+                    "default": [
+                        ".env"
+                    ],
+                    "items": {
+                        "type": "string"
+                    },
+                    "minItems": 1,
+                    "uniqueItems": true,
+                    "description": "env files to read from"
                 }
             }
         }
@@ -56,18 +68,17 @@
         "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
-        "@types/glob": "^7.1.3",
-        "@types/mocha": "^8.2.0",
-        "@types/node": "^14.14.25",
+        "@types/glob": "^7.2.0",
+        "@types/mocha": "^9.1.0",
+        "@types/node": "^17.0.21",
         "@types/vscode": "^1.51.0",
-        "glob": "^7.1.6",
-        "mocha": "^8.2.1",
-        "tslint": "^6.1.3",
-        "typescript": "^4.1.3",
-        "vscode-test": "^1.5.0"
+        "@vscode/test-electron": "^2.1.3",
+        "glob": "^7.2.0",
+        "mocha": "^9.2.1",
+        "typescript": "^4.6.2"
     },
     "dependencies": {
         "escape-string-regexp": "^4.0.0",
-        "lodash.debounce": "^4.0.8"
+        "lodash": "^4.17.21"
     }
 }
