--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "laravel-goto-env",
     "displayName": "Laravel Goto Env",
     "description": "Quick jump to env",
-    "version": "0.2.5",
+    "version": "0.3.0",
     "publisher": "ctf0",
     "engines": {
-        "vscode": "^1.51.0"
+        "vscode": "^1.68.0"
     },
     "repository": "https://github.com/ctf0/laravel-goto-env",
     "icon": "images/logo.png",
@@ -25,8 +25,15 @@
         "onLanguage:blade",
         "onStartupFinished"
     ],
-    "main": "./out/src/extension",
+    "main": "./out/main",
     "contributes": {
+        "commands": [
+            {
+                "command": "lge.openFile",
+                "title": "lge: open file",
+                "when": "false"
+            }
+        ],
         "configuration": {
             "type": "object",
             "title": "Laravel Goto Env",
@@ -61,24 +68,23 @@
         }
     },
     "scripts": {
-        "vscode:prepublish": "yarn run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "pretest": "yarn run compile",
-        "test": "node ./out/test/runTest.js"
+        "vscode:prepublish": "npm run esbuild-base -- --minify",
+        "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+        "esbuild": "npm run esbuild-base -- --sourcemap",
+        "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+        "watch": "npm run vscode:prepublish",
+        "test-compile": "tsc -p ./"
     },
     "devDependencies": {
-        "@types/glob": "^7.2.0",
-        "@types/mocha": "^9.1.0",
-        "@types/node": "^17.0.23",
-        "@types/vscode": "^1.51.0",
-        "@vscode/test-electron": "^2.1.3",
-        "glob": "^7.2.0",
-        "mocha": "^9.2.2",
-        "typescript": "^4.6.3"
+        "@types/glob": "^8.0.0",
+        "@types/node": "^18.11.9",
+        "@types/vscode": "^1.68.0",
+        "esbuild": "^0.15.13",
+        "glob": "^8.0.3",
+        "typescript": "^4.8.4"
     },
     "dependencies": {
-        "escape-string-regexp": "^4.0.0",
+        "escape-string-regexp": "^5.0.0",
         "lodash": "^4.17.21"
     }
 }
