--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "laravel-goto-env",
     "displayName": "Laravel Goto Env",
     "description": "Quick jump to env",
-    "version": "0.4.0",
+    "version": "0.4.1",
     "publisher": "ctf0",
     "engines": {
         "vscode": "^1.68.0"
@@ -79,5 +79,8 @@
     "dependencies": {
         "escape-string-regexp": "^5.0.0",
         "lodash": "^4.17.21"
-    }
+    },
+    "extensionDependencies": [
+        "ctf0.env-symbol-provider"
+    ]
 }
