--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "laravel-goto-env",
     "displayName": "Laravel Goto Env",
     "description": "Quick jump to env",
-    "version": "0.4.2",
+    "version": "0.4.3",
     "publisher": "ctf0",
     "engines": {
         "vscode": "^1.68.0"
@@ -65,8 +65,7 @@
         "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
         "esbuild": "npm run esbuild-base -- --sourcemap",
         "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
-        "watch": "npm run vscode:prepublish",
-        "test-compile": "tsc -p ./"
+        "watch": "npm run vscode:prepublish"
     },
     "devDependencies": {
         "@types/node": "^18.11.9",
@@ -76,7 +75,7 @@
     },
     "dependencies": {
         "escape-string-regexp": "^5.0.0",
-        "lodash": "^4.17.21"
+        "lodash.debounce": "^4.0.8"
     },
     "extensionDependencies": [
         "ctf0.env-symbol-provider"
