--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "laravel-goto-env",
     "displayName": "Laravel Goto Env",
     "description": "Quick jump to env",
-    "version": "0.4.3",
+    "version": "0.4.4",
     "publisher": "ctf0",
     "engines": {
         "vscode": "^1.68.0"
@@ -61,17 +61,17 @@
         }
     },
     "scripts": {
-        "vscode:prepublish": "npm run esbuild-base -- --minify",
+        "vscode:prepublish": "npm run esbuild-base -- --pure:console.log --minify",
         "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
         "esbuild": "npm run esbuild-base -- --sourcemap",
         "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
-        "watch": "npm run vscode:prepublish"
+        "watch": "npm run esbuild"
     },
     "devDependencies": {
-        "@types/node": "^18.11.9",
+        "@types/node": "^18.15.6",
         "@types/vscode": "^1.68.0",
-        "esbuild": "^0.15.13",
-        "typescript": "^4.8.4"
+        "esbuild": "^0.17.12",
+        "typescript": "^5.0.2"
     },
     "dependencies": {
         "escape-string-regexp": "^5.0.0",
